Make android specific changes to bluez4.
a) Add Android.mk files
b) Change conf files
c) Add liba2dp.c
d) Some tweaks to get it to build.

--- a/audio/audio.conf
+++ b/audio/audio.conf
@@ -3,6 +3,8 @@
 # This section contains options which are not specific to any
 # particular interface
 [General]
+Enable=Source,Control,Sink
+Disable=Headset,Gateway
 
 # Switch to master role for incoming connections (defaults to true)
 #Master=true
@@ -23,16 +25,19 @@
 
 # Headset interface specific options (i.e. options which affect how the audio
 # service interacts with remote headset devices)
-[Headset]
+#[Headset]
 
-# Set to true to support HFP, false means only HSP is supported
-# Defaults to true
-HFP=true
+# Set to true to support HFP (in addition to HSP only which is the default)
+# Defaults to false
+#HFP=true
 
 # Maximum number of connected HSP/HFP devices per adapter. Defaults to 1
-MaxConnections=1
+#MaxConnections=1
 
 # Just an example of potential config options for the other interfaces
-#[A2DP]
-#SBCSources=1
-#MPEG12Sources=0
+[A2DP]
+SBCSources=1
+MPEG12Sources=0
+
+[AVRCP]
+InputDeviceName=AVRCP
