--- a/src/hcid.conf
+++ b/src/hcid.conf
@@ -21,7 +21,7 @@ options {
 	pairing multi;
 
 	# Default PIN code for incoming connections
-	passkey "BlueZ";
+	passkey "Bluez";
 }
 
 # Default settings for HCI devices
