--- a/src/main.conf
+++ b/src/main.conf
@@ -6,7 +6,7 @@
 # Default adaper name
 # %h - substituted for hostname
 # %d - substituted for adapter id
-Name = %h-%d
+Name = "Bluez"
 
 # Default device class. Only the major and minor device class bits are
 # considered.
@@ -15,7 +15,7 @@ Class = 0x000100
 # How long to stay in discoverable mode before going back to non-discoverable
 # The value is in seconds. Default is 180, i.e. 3 minutes.
 # 0 = disable timer, i.e. stay discoverable forever
-DiscoverableTimeout = 0
+DiscoverableTimeout = 120
 
 # How long to stay in pairable mode before going back to non-discoverable
 # The value is in seconds. Default is 0.
@@ -39,7 +39,7 @@ RememberPowered = true
 
 # Use vendor, product and version information for DID profile support.
 # The values are separated by ":" and VID, PID and version.
-#DeviceID = 1234:5678:abcd
+DeviceID = android:generic:1.5
 
 # Do reverse service discovery for previously unknown devices that connect to
 # us. This option is really only needed for qualification since the BITE tester
